feat add insert price and stock and fix get ingrdient